--- a/_posts/2021-07-11-minimum.md
+++ b/_posts/2021-07-11-minimum.md
@@ -1,3 +1,5 @@
 # Hello world (Minimum)
 
-![Meeting](../images/meeting/2021-07-10-pashe-weekly-update/img1.jpg)  
+This is a post with minimum site meta data.
+
+![Meeting](images/img1.jpg)  
